# bilby

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
benches/: cubature.rs  integration_1d.rs  node_generation.rs
src/: adaptive.rs  cache.rs  cauchy_pv.rs  clenshaw_curtis.rs  error.rs  gauss_chebyshev.rs  gauss_hermite.rs  gauss_jacobi.rs  gauss_kronrod.rs  gauss_laguerre.rs  gauss_legendre.rs  gauss_lobatto.rs  gauss_radau.rs  golub_welsch.rs  lib.rs  oscillatory.rs  result.rs  rule.rs  tanh_sinh.rs  transforms.rs  weighted.rs
src/cubature/: adaptive.rs  halton.rs  mod.rs  monte_carlo.rs  sobol.rs  sparse_grid.rs  tensor.rs
