[package]
name = "bilby"
version = "1.0.0"
edition = "2021"
rust-version = "1.93"
description = "A high-performance numerical quadrature (integration) library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Entrolution/bilby"
documentation = "https://docs.rs/bilby"
readme = "README.md"
keywords = ["quadrature", "integration", "numerical", "gauss-legendre", "scientific"]
categories = ["mathematics", "science", "algorithms"]

[lib]
bench = false

[features]
default = ["std"]
std = []
parallel = ["dep:rayon", "std"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "node_generation"
harness = false

[[bench]]
name = "integration_1d"
harness = false

[[bench]]
name = "cubature"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
